# bunty_ai_posesuggetor

./: .gitignore  App.tsx  README.md  app.json  eslint.config.js  nitro.json  package-lock.json  package.json  tsconfig.json
android/: CMakeLists.txt  build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/growthbyte/aiposesuggestor/: MainActivity.kt  MainApplication.kt
android/app/src/main/res/values/: strings.xml
android/poseplugin/: build.gradle
android/poseplugin/src/main/cpp/: cpp-adapter.cpp
android/poseplugin/src/main/java/com/margelo/nitro/aiposesuggestor/poseplugin/: FaceLandmarkerCore.kt  HybridFaceLandmarkerOutput.kt  HybridPoseLandmarker.kt  HybridPoseLandmarkerOutput.kt  PoseLandmarkerCore.kt  PosePluginInit.kt
docs/: sourcing-workflow.md
docs/debug/: RESUME-HERE.md
docs/decisions/: ADR-001-pose-detection-architecture.md
images/: manifest.json
scripts/: generate-pose-outline.mjs  mediapipe-host.html  patch-nitrogen.cjs  process-poses.mjs  segmenter-host.html  smartSuggestions-harness.mjs  verify-host.mjs
src/ai/: aiCoachingService.ts  topDeltas.ts  useAiCoachingOrchestrator.ts
src/camera/: filterMatrices.ts  useFaceLandmarkerOutput.ts  usePoseLandmarkerOutput.ts
src/ml/: faceShape.test.ts  faceShape.ts  normalize.test.ts  normalize.ts  poseValidation.test.ts  poseValidation.ts
src/native/: FaceLandmarkerOutput.nitro.ts  PoseLandmarker.nitro.ts  PoseLandmarkerOutput.nitro.ts  poseLandmarkerNative.ts
src/recommendation/: poseMatch.test.ts  poseMatch.ts  recommend.test.ts  recommend.ts  recommendCore.ts
src/smartSuggestions/: buildPrompt.ts  cache.ts  (+8 more)
(+67 files in other folders)
